@@ -2214,7 +2214,7 @@
           <parameter type="gpointer" name="data" />
         </parameters>
       </virtual_method>
-      <signal name="ChildrenChanged" cname="children_changed" when="LAST" field_name="children_changed">
+      <signal name="ChildrenChanged" cname="children_changed" when="LAST" manual="true" field_name="children_changed">
         <return-type type="void" />
         <parameters>
           <parameter type="AtkObject*" name="accessible" />
@@ -2229,7 +2229,7 @@
           <parameter type="gboolean" name="focus_in" />
         </parameters>
       </signal>
-      <signal name="PropertyChange" cname="property_change" when="LAST" field_name="property_change">
+      <signal name="PropertyChange" cname="property_change" when="LAST" manual="true" field_name="property_change">
         <return-type type="void" />
         <parameters>
           <parameter type="AtkObject*" name="accessible" />
@@ -2250,7 +2250,7 @@
           <parameter type="AtkObject*" name="accessible" />
         </parameters>
       </signal>
-      <signal name="ActiveDescendantChanged" cname="active_descendant_changed" when="LAST" field_name="active_descendant_changed">
+      <signal name="ActiveDescendantChanged" cname="active_descendant_changed" when="LAST" manual="true" field_name="active_descendant_changed">
         <return-type type="void" />
         <parameters>
           <parameter type="AtkObject*" name="accessible" />
