@@ -1001,6 +1001,11 @@
     </callback>
     <callback name="ItemFactoryCallback2" cname="GtkItemFactoryCallback2">
       <return-type type="void" />
+      <parameters>
+        <parameter type="gpointer" name="callback_data" />
+        <parameter type="guint" name="callback_action" />
+        <parameter type="GtkWidget*" name="widget" />
+      </parameters>
     </callback>
     <callback name="KeySnoopFunc" cname="GtkKeySnoopFunc">
       <return-type type="gint" />
@@ -1627,7 +1632,7 @@
       </method>
     </interface>
     <interface name="Editable" cname="GtkEditable">
-      <signal name="InsertText" cname="insert_text" when="LAST" field_name="insert_text">
+      <signal name="InsertText" cname="insert_text" when="LAST" manual="true" field_name="insert_text">
         <return-type type="void" />
         <parameters>
           <parameter type="GtkEditable*" name="editable" />
@@ -2588,7 +2593,7 @@
           <parameter type="GtkTreePath*" name="path" />
         </parameters>
       </signal>
-      <signal name="RowsReordered" cname="rows_reordered" when="FIRST" field_name="rows_reordered">
+      <signal name="RowsReordered" cname="rows_reordered" when="FIRST" manual="true" field_name="rows_reordered">
         <return-type type="void" />
         <parameters>
           <parameter type="GtkTreeModel*" name="tree_model" />
@@ -9539,7 +9544,7 @@
           <parameter type="GtkMenuItem*" name="menu_item" />
         </parameters>
       </signal>
-      <signal name="ToggleSizeRequest" cname="toggle_size_request" when="FIRST" field_name="toggle_size_request">
+      <signal name="ToggleSizeRequest" cname="toggle_size_request" when="FIRST" manual="true" field_name="toggle_size_request">
         <return-type type="void" />
         <parameters>
           <parameter type="GtkMenuItem*" name="menu_item" />
@@ -9960,7 +9965,7 @@
       </virtual_method>
       <childprop name="Reorderable" cname="reorderable" type="gboolean" readable="true" writeable="true" />
       <childprop name="Detachable" cname="detachable" type="gboolean" readable="true" writeable="true" />
-      <signal name="SwitchPage" cname="switch_page" when="LAST" field_name="switch_page">
+      <signal name="SwitchPage" cname="switch_page" when="LAST" manual="true" field_name="switch_page">
         <return-type type="void" />
         <parameters>
           <parameter type="GtkNotebook*" name="notebook" />
@@ -12987,7 +12992,7 @@
       <property name="Wrap" cname="wrap" type="gboolean" readable="true" writeable="true" />
       <property name="UpdatePolicy" cname="update-policy" type="GtkSpinButtonUpdatePolicy" readable="true" writeable="true" />
       <property name="Value" cname="value" type="gdouble" readable="true" writeable="true" />
-      <signal name="Input" cname="input" when="LAST" field_name="input">
+      <signal name="Input" cname="input" when="LAST" manual="true" field_name="input">
         <return-type type="gint" />
         <parameters>
           <parameter type="GtkSpinButton*" name="spin_button" />
