@@ -1,5 +1,14 @@
 2008-11-05  Mike Kestner  <mkestner@novell.com>
 
+	* atk/atk-api-2.12.raw: regen
+	* gtk/gtk-api-2.12.raw: regen
+	* generator/Signal.cs: reinstate old custom marshaler generation and
+	generate custom marshaling when 'manual' attr is set.
+	* parser/gapi2xml.pl: set manual attr on sigs that have G_TYPE_POINTER
+	parameters since the generic closure can't cope with them.
+
+2008-11-05  Mike Kestner  <mkestner@novell.com>
+
 	* gtk/Builder.custom: #if the new API for 2.14 for now so it
 	doesn't get confused as stable API yet.
 
